adding details to capstone modal

--- a/index.html
+++ b/index.html
@@ -337,8 +337,8 @@
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Resume</h2>
           <h3 class="section-subheading text-muted">View or download my resume below</h3>
-          <a href="/img/shecking/StevenHeckingResume.pdf">View</a>
-          <a href="/img/shecking/StevenHeckingResume.pdf" download>Download</a>
+          <p><a class="personal-links" href="/img/shecking/StevenHeckingResume.pdf">View</a></p>
+          <p><a class="personal-links" href="/img/shecking/StevenHeckingResume.pdf" download>Download</a></p>
         </div>
       </div>
     </div>
@@ -350,10 +350,10 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Contact Me</h2>
-          <h3 class="section-subheading text-muted">Helpful links:</h3>
-          <p><a href="https://github.com/shecking">My GitHub</a></p>
-          <p><a href="https://www.linkedin.com/in/stevenhecking/">My LinkedIn</a></p>
-          <p><a href="#">My GA Profile (coming soon)</a></p>
+          <!-- <h3 class="section-subheading text-muted"></h3> -->
+          <p><a class="personal-links" href="https://github.com/shecking">My GitHub</a></p>
+          <p><a class="personal-links" href="https://www.linkedin.com/in/stevenhecking/">My LinkedIn</a></p>
+          <p><a class="personal-links" href="#">My GA Profile (coming soon)</a></p>
         </div>
       </div>
       <div class="row">
@@ -447,8 +447,14 @@
                 <h2 class="text-uppercase">Composer's Companion</h2>
                 <p class="item-intro text-muted">for writing music on the go</p>
                 <img class="img-fluid d-block mx-auto" src="img/shecking/projects-full/project4-full.jpg" alt="">
-                <a class='composers-companion' href='https://shecking.github.io/composers-companion-client/#/'>View this project here</a>
-                <p>This app allows you to quickly create and store sketches of your musical ideas, wherever you are and whenever you need, and without the constraints of complex notation programs.</p>
+                <h4><a class='project-link' href='https://shecking.github.io/composers-companion-client/#/'>View this project here</a></h4>
+                <p><a href="https://github.com/shecking/composers-companion-client">View Front-End Repo</a></p>
+                <p><a href="https://github.com/shecking/composers-companion-api">View Back-End Repo</a></p>
+                <p>Technologies used: HTML, CSS, JavaScript, Bootstrap, Axios, DOM/API, GitHub/GitHub Pages, React, react-abcjs, npm</p>
+                <h5>About</h5>
+                <p>This application is intended for musicians, composers, songwriters, and performers of all kinds. It allows users to quickly create and store sketches of your musical ideas, wherever you are and whenever you need, and without the constraints of complex notation programs.</p>
+                <h5>Additional Notes</h5>
+                <p>As a musician and composer, I've had plenty of experience with music notation software through my academic career and beyond, but these programs required, at the very least, a personal computer with this complex software installed to store, edit, and playback my pieces. This app seeks to solve a major part of this issue: mobility. As far as my own experience, I always carried around a pencil and paper in the hopes of capturing ideas, but this always seemed to be forgotten. With modern mobile technology on the rise, it became obvious that a hole existed that I might be able to fill.</p>
                 <ul class="list-inline">
                   <li>Date: March-April 2020</li>
                   <li>Built for: GA Boston</li>
@@ -483,7 +489,7 @@
                 <h2 class="text-uppercase">HangOut</h2>
                 <p class="item-intro text-muted">for public event and RSVP management</p>
                 <img class="img-fluid d-block mx-auto" src="img/shecking/projects-full/project3-full.jpg" alt="">
-                <a class='hangout' href='https://shecking.github.io/hangout-client/'>View this project here</a>
+                <h4><a class='project-link' href='https://shecking.github.io/hangout-client/'>View this project here</a></h4>
                 <p>This app gives its users a simple, straightforward way to create and post public events for others to view and RSVP to.</p>
                 <ul class="list-inline">
                   <li>Date: March 2020</li>
@@ -519,7 +525,7 @@
                 <h2 class="text-uppercase">Practice Session Tracker</h2>
                 <p class="item-intro text-muted">for logging your musical practice time</p>
                 <img class="img-fluid d-block mx-auto" src="img/shecking/projects-full/project2-full.jpg" alt="">
-                <a class='practice-session-tracker' href='https://shecking.github.io/client-project2/'>View this project here</a>
+                <h4><a class='project-link' href='https://shecking.github.io/client-project2/'>View this project here</a></h4>
                 <p>This app was built for the modern musician; performers, conductors, hobbyists, and everyone in between. Users can log and store their personal practicing sessions, enabling them to see their progress over time.</p>
                 <ul class="list-inline">
                   <li>Date: February-March 2020</li>
@@ -555,7 +561,7 @@
                 <h2 class="text-uppercase">Tic-Tac-Toe</h2>
                 <p class="item-intro text-muted">for a quick fix of a classic game</p>
                 <img class="img-fluid d-block mx-auto" src="img/shecking/projects-full/project1-full.jpg" alt="">
-                <a class='tic-tac-toe' href='https://shecking.github.io/tictactoe-client/'>View this project here</a>
+                <h4><a class='project-link' href='https://shecking.github.io/tictactoe-client/'>View this project here</a></h4>
                 <p>Let's cut to the chase; this is an app for playing the age-old, time-honored game of Tic-Tac-Toe. Find a friend, start it up, and play as many rounds as you like! </p>
                 <ul class="list-inline">
                   <li>Date: February 2020</li>
