fixing alignment on project modal

--- a/index.html
+++ b/index.html
@@ -447,10 +447,10 @@
                 <h2 class="text-uppercase">Composer's Companion</h2>
                 <p class="item-intro text-muted">for writing music on the go</p>
                 <img class="img-fluid d-block mx-auto" src="img/shecking/projects-full/project4-full.jpg" alt="">
-                <h4><a class='project-link' href='https://shecking.github.io/composers-companion-client/#/'>View this project here</a></h4>
-                <p><a href="https://github.com/shecking/composers-companion-client">View Front-End Repo</a></p>
-                <p><a href="https://github.com/shecking/composers-companion-api">View Back-End Repo</a></p>
-                <p>Technologies used: HTML, CSS, JavaScript, Bootstrap, Axios, DOM/API, GitHub/GitHub Pages, React, react-abcjs, npm</p>
+                <h4><a class="project-link" href='https://shecking.github.io/composers-companion-client/#/'>View this project here</a></h4>
+                <p><a class="repo-link" href="https://github.com/shecking/composers-companion-client">View Front-End Repo</a></p>
+                <p><a class="repo-link" href="https://github.com/shecking/composers-companion-api">View Back-End Repo</a></p>
+                <p>Technologies used: HTML, CSS, JavaScript, Bootstrap, Axios, DOM/API, GitHub/GitHub Pages, React, react-abcjs, npm, Express</p>
                 <h5>About</h5>
                 <p>This application is intended for musicians, composers, songwriters, and performers of all kinds. It allows users to quickly create and store sketches of your musical ideas, wherever you are and whenever you need, and without the constraints of complex notation programs.</p>
                 <h5>Additional Notes</h5>
@@ -490,7 +490,11 @@
                 <p class="item-intro text-muted">for public event and RSVP management</p>
                 <img class="img-fluid d-block mx-auto" src="img/shecking/projects-full/project3-full.jpg" alt="">
                 <h4><a class='project-link' href='https://shecking.github.io/hangout-client/'>View this project here</a></h4>
-                <p>This app gives its users a simple, straightforward way to create and post public events for others to view and RSVP to.</p>
+                <p><a href="https://github.com/shecking/hangout-client">View Front-End Repo</a></p>
+                <p><a href="https://github.com/shecking/hangout-api">View Back-End Repo</a></p>
+                <p>Technologies used: HTML, CSS, JavaScript, SASS, Bootstrap, jQuery/AJAX, Handlebars, MongoDB, Mongoose, Express, Git/GitHub, npm</p>
+                <h5>About</h5>
+                <p>This app gives its users a simple, straightforward way to create and post public events for others to view and RSVP to. Each event is broken down into pieces; a name, a date/time, a location, and an option to provide a description of the event. Personal events made by a user can be edited or deleted as they see fit, and each event includes a view of how many users are attending.</p>
                 <ul class="list-inline">
                   <li>Date: March 2020</li>
                   <li>Built for: GA Boston</li>
