adding project 1,2,3 details in respective modals

--- a/index.html
+++ b/index.html
@@ -490,8 +490,8 @@
                 <p class="item-intro text-muted">for public event and RSVP management</p>
                 <img class="img-fluid d-block mx-auto" src="img/shecking/projects-full/project3-full.jpg" alt="">
                 <h4><a class='project-link' href='https://shecking.github.io/hangout-client/'>View this project here</a></h4>
-                <p><a href="https://github.com/shecking/hangout-client">View Front-End Repo</a></p>
-                <p><a href="https://github.com/shecking/hangout-api">View Back-End Repo</a></p>
+                <p><a class="repo-link" href="https://github.com/shecking/hangout-client">View Front-End Repo</a></p>
+                <p><a class="repo-link" href="https://github.com/shecking/hangout-api">View Back-End Repo</a></p>
                 <p>Technologies used: HTML, CSS, JavaScript, SASS, Bootstrap, jQuery/AJAX, Handlebars, MongoDB, Mongoose, Express, Git/GitHub, npm</p>
                 <h5>About</h5>
                 <p>This app gives its users a simple, straightforward way to create and post public events for others to view and RSVP to. Each event is broken down into pieces; a name, a date/time, a location, and an option to provide a description of the event. Personal events made by a user can be edited or deleted as they see fit, and each event includes a view of how many users are attending.</p>
@@ -530,7 +530,10 @@
                 <p class="item-intro text-muted">for logging your musical practice time</p>
                 <img class="img-fluid d-block mx-auto" src="img/shecking/projects-full/project2-full.jpg" alt="">
                 <h4><a class='project-link' href='https://shecking.github.io/client-project2/'>View this project here</a></h4>
-                <p>This app was built for the modern musician; performers, conductors, hobbyists, and everyone in between. Users can log and store their personal practicing sessions, enabling them to see their progress over time.</p>
+                <p><a class="repo-link" href="https://shecking.github.io/client-project2/">View Front-End Repo</a></p>
+                <p><a class="repo-link" href="https://github.com/shecking/rails-api-project2">View Back-End Repo</a></p>
+                <h5>About</h5>
+                <p>This app was built for the modern musician; performers, conductors, hobbyists, and everyone in between. Users can log and store their personal practicing sessions, enabling them to see their progress over time. This front end application, as well as its complementary back end framework, represents my second major project completed as a software engineer, and the first to involve a full stack development process. Building on my prior experience creating a front end application with a supplied back end, I followed a process that was quite similar; learn the structures and behaviors of the languages and programs I was working with, proceed slowly and methodically, and work toward a minimum viable product above all else.</p>
                 <ul class="list-inline">
                   <li>Date: February-March 2020</li>
                   <li>Built for: GA Boston</li>
@@ -566,7 +569,9 @@
                 <p class="item-intro text-muted">for a quick fix of a classic game</p>
                 <img class="img-fluid d-block mx-auto" src="img/shecking/projects-full/project1-full.jpg" alt="">
                 <h4><a class='project-link' href='https://shecking.github.io/tictactoe-client/'>View this project here</a></h4>
-                <p>Let's cut to the chase; this is an app for playing the age-old, time-honored game of Tic-Tac-Toe. Find a friend, start it up, and play as many rounds as you like! </p>
+                <p><a class="repo-link" href="https://github.com/shecking/tictactoe-client/">View Repo</a></p>
+                <h5>About</h5>
+                <p>Let's cut to the chase; this is an app for playing the age-old, time-honored game of Tic-Tac-Toe. Find a friend, start it up, and play as many rounds as you like! This project represents my first real step into software engineering, so while building it was essential for me to spend time planning the structure of the application, define its pieces and their interactions, and make small, incremental steps rather than have the end goal in mind immediately. Throughout the development process, I referenced many sources of information to familiarize myself with language functions and syntax, best practices for programming, and in order to troubleshoot errors and code bugs. These sources include language documentation, error logging, Google Chrome's Developer Tools, external blogs and internet resources, as well as discussing issues with fellow students and our instructors.</p>
                 <ul class="list-inline">
                   <li>Date: February 2020</li>
                   <li>Built for: GA Boston</li>
