--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <i class="fas fa-keyboard fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Software Engineering</h4>
-          <p class="text-muted">I have experience building efficient, user-friendly web applications from the ground up.</p>
+          <p class="text-muted">I have experience building efficient, user-friendly web applications from the ground up, both independently and with a team.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
@@ -98,7 +98,7 @@
             <i class="fas fa-balance-scale fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Full-Stack Development</h4>
-          <p class="text-muted">I combine the analytic and the creative, using a variety of front- and back-end frameworks.</p>
+          <p class="text-muted">I combine the analytic and the creative, using a variety of front- and back-end frameworks to achieve tangible, meaningful results.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
@@ -106,7 +106,7 @@
             <i class="fas fa-music fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Music</h4>
-          <p class="text-muted">I am an accomplished musician who holds two degrees in composition, and works to integrate the arts with modern technology.</p>
+          <p class="text-muted">I am an accomplished musician who holds two degrees in composition, and work to integrate the arts with modern technology.</p>
         </div>
       </div>
     </div>
@@ -203,7 +203,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Skills and Proficiencies</h2>
-          <h3 class="section-subheading text-muted"></h3>
+          <!-- <h3 class="section-subheading text-muted"></h3> -->
         </div>
       </div>
       <div class="row">
