Minor edits for kara; skills, GA profile link
Need to find handlebars logo to add to skills section

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Skills and Proficiencies</h2>
+          <h2 class="section-heading text-uppercase">Skills</h2>
           <!-- <h3 class="section-subheading text-muted"></h3> -->
         </div>
       </div>
@@ -255,6 +255,12 @@
             <p>grunt</p>
           </div>
         </div>
+        <!-- <div class="col-lg-3 col-md-6 text-center">
+          <div class="service-box mt-5 mx-auto">
+            <i class="devicon devicon-handlebars-original colored"></i>
+            <p>Handlebars</p>
+          </div>
+        </div> -->
         <div class="col-lg-3 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
             <i class="devicon devicon-heroku-plain colored"></i>
@@ -282,13 +288,13 @@
         <div class="col-lg-3 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
             <i class="devicon devicon-mongodb-plain colored"></i>
-            <p>mongoDB</p>
+            <p>MongoDB</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="service-box mt-5 mx-auto">
             <i class="devicon devicon-nodejs-plain colored"></i>
-            <p>nodejs</p>
+            <p>node.js</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
@@ -322,11 +328,11 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-lg-8 mx-auto text-center">
           <p class="large text-muted"></p>
         </div>
-      </div>
+      </div> -->
     </div>
   </section>
 
@@ -351,9 +357,9 @@
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Contact Me</h2>
           <!-- <h3 class="section-subheading text-muted"></h3> -->
-          <p><a class="personal-links" href="https://github.com/shecking">My GitHub</a></p>
           <p><a class="personal-links" href="https://www.linkedin.com/in/stevenhecking/">My LinkedIn</a></p>
-          <p><a class="personal-links" href="#">My GA Profile (coming soon)</a></p>
+          <p><a class="personal-links" href="https://github.com/shecking">My GitHub</a></p>
+          <p><a class="personal-links" href="https://profiles.generalassemb.ly/profiles/shecking">My GA Profile</a></p>
         </div>
       </div>
       <div class="row">
