Temporary linking to organization version of HangOut

--- a/index.html
+++ b/index.html
@@ -495,9 +495,12 @@
                 <h2 class="text-uppercase">HangOut</h2>
                 <p class="item-intro text-muted">for public event and RSVP management</p>
                 <img class="img-fluid d-block mx-auto" src="img/shecking/projects-full/project3-full.jpg" alt="">
-                <h4><a class='project-link' href='https://shecking.github.io/hangout-client/'>View this project here</a></h4>
-                <p><a class="repo-link" href="https://github.com/shecking/hangout-client">View Front-End Repo</a></p>
-                <p><a class="repo-link" href="https://github.com/shecking/hangout-api">View Back-End Repo</a></p>
+                <h4><a class='project-link' href='https://we-work-on-master.github.io/hangout-client/'>View this project here</a></h4>
+                <!-- <h4><a class='project-link' href='https://shecking.github.io/hangout-client/'>View this project here</a></h4> -->
+                <p><a class="repo-link" href="https://github.com/We-Work-On-Master/hangout-client">View Front-End Repo</a></p>
+                <!-- <p><a class="repo-link" href="https://github.com/shecking/hangout-client">View Front-End Repo</a></p> -->
+                <p><a class="repo-link" href="https://github.com/We-Work-On-Master/hangout-api">View Back-End Repo</a></p>
+                <!-- <p><a class="repo-link" href="https://github.com/shecking/hangout-api">View Back-End Repo</a></p> -->
                 <p>Technologies used: HTML, CSS, JavaScript, SASS, Bootstrap, jQuery/AJAX, Handlebars, MongoDB, Mongoose, Express, Git/GitHub, npm</p>
                 <h5>About</h5>
                 <p>This app gives its users a simple, straightforward way to create and post public events for others to view and RSVP to. Each event is broken down into pieces; a name, a date/time, a location, and an option to provide a description of the event. Personal events made by a user can be edited or deleted as they see fit, and each event includes a view of how many users are attending.</p>
