Fixing darkmode text and backgrounds

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   </section>
 
   <!-- Project Showcase (Portfolio) -->
-  <section class="bg-light page-section" id="portfolio">
+  <section class="page-section" id="portfolio">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -198,7 +198,7 @@
   </section>
 
   <!-- Skills -->
-  <section class="bg-light page-section" id="skills">
+  <section class="page-section" id="skills">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -399,7 +399,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="footer">
+  <footer class="page-section footer">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-4">
