--- a/index.html
+++ b/index.html
@@ -327,6 +327,12 @@
             <p>SASS</p>
           </div>
         </div>
+        <div class="col-lg-3 col-md-6 text-center">
+          <div class="service-box mt-5 mx-auto">
+            <i class="devicon devicon-typescript-original colored"></i>
+            <p>TypeScript</p>
+          </div>
+        </div>
       </div>
       <!-- <div class="row">
         <div class="col-lg-8 mx-auto text-center">
