--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
               <div class="clearfix"></div>
               <div class="col-lg-12 text-center">
                 <div id="success"></div>
-                <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button>
+                <button type="submit" id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase">Send Message</button>
               </div>
             </div>
           </form>
