--- a/index.html
+++ b/index.html
@@ -366,9 +366,10 @@
           <p><a class="personal-links" href="https://www.linkedin.com/in/stevenhecking/">My LinkedIn</a></p>
           <p><a class="personal-links" href="https://github.com/shecking">My GitHub</a></p>
           <p><a class="personal-links" href="https://profiles.generalassemb.ly/profiles/shecking">My GA Profile</a></p>
+          <p class="personal-links">Like what you see? Send me an email at shecking1115@gmail.com and let's chat!</p>
         </div>
       </div>
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-lg-12">
           <form action="./mail/contact_me.php" method="post" id="contactForm" name="sentMessage" novalidate="novalidate">
             <div class="row">
@@ -400,7 +401,7 @@
             </div>
           </form>
         </div>
-      </div>
+      </div> -->
     </div>
   </section>
 
