removing tell me more button

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="intro-text">
         <div class="intro-lead-in">software engineer | full-stack developer | musician</div>
         <div class="intro-heading">steven hecking</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">tell me more</a>
+        <!-- <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">tell me more</a> -->
       </div>
     </div>
   </header>
